[package]
name = "arbitrary-int"
version = "1.0.0"
edition = "2021"
authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
description = "Modern and lightweight implementation of u2, u3, u4, ..., u127."
license = "MIT"
repository = "https://github.com/danlehmann/arbitrary-int"
readme = "README.md"
keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]

[dependencies]

