[package]
name = "arbitrary-int"
version = "1.2.7"
edition = "2021"
authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
description = "Modern and lightweight implementation of u2, u3, u4, ..., u127."
license = "MIT"
repository = "https://github.com/danlehmann/arbitrary-int"
readme = "README.md"
keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]

[features]
std = []

# Supports const trait implementation through const_convert and const_trait_impl. Support for those was removed
# from more recent Rust nightlies, so this feature requires an older Rust compiler
# (2023-04-20 is broken, 2022-11-23 works. The exact day is somewhere inbetween)
const_convert_and_const_trait_impl = []

# core::fmt::Step is currently unstable and is available on nightly behind a feature gate
step_trait = []

# Supports defmt
defmt = ["dep:defmt"]

# Supports serde
serde = ["dep:serde"]

borsh = ["dep:borsh"]

schema = ["dep:schemars", "std"]

[dependencies]
num-traits = { version = "0.2.17", default-features = false, optional = true }
defmt = { version = "0.3.5", optional = true }
serde = { version = "1.0", optional = true, default-features = false}
borsh = { version = "1.5.1", optional = true, features = ["derive", "unstable__schema"], default-features = false}
schemars ={ version = "*", optional = true, features = ["derive"], default-features = false}

[dev-dependencies]
serde_test = "1.0"
